Configures logout in UE, adds a "me" view
